--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,5 +1,23 @@
 <header class="header">
 	<div class="header__content _container">
+		<a href="" class="header__logo">
+			<img src="img/Logo.svg" alt="">
+		</a>
+		<div class="header__menu menu">
+			<div class="menu__icon icon-menu">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<nav class="menu__body">
+				<ul class="menu__list">
+					<li><a href="" class="menu__link">ABOUT</a></li>
+					<li><a href="" class="menu__link">HOW TO</a></li>
+					<li><a href="" class="menu__link">FAQS</a></li>
+				</ul>
+				<a class="header__btn" href=""><span>CONTACT US</span></a>
+			</nav>
+		</div>
 
 	</div>
 </header>
