--- a/#src/_header.html
+++ b/#src/_header.html
@@ -15,9 +15,22 @@
 					<li><a href="" class="menu__link">HOW TO</a></li>
 					<li><a href="" class="menu__link">FAQS</a></li>
 				</ul>
-				<a class="header__btn" href=""><span>CONTACT US</span></a>
+				<a class="header__btn btn" href=""><span>CONTACT US</span></a>
 			</nav>
 		</div>
 
 	</div>
 </header>
+
+<div class="promo">
+	<div class="promo__content _container">
+		<div class="promo__bg-img">
+			<img src="img/header-scene.svg" alt="">
+		</div>
+		<h1 class="promo__title">Your awesome traffic permit consultant.</h1>
+		<a class="promo__btn btn btn_arrow" href=""><span>GET STARTED</span></a>
+		<div class="promo__bg-track-img">
+			<img src="img/promo__bg-track-2.svg" alt="">
+		</div>
+	</div>
+</div>
