--- a/#src/index.html
+++ b/#src/index.html
@@ -8,6 +8,24 @@
 	<div class="wrapper">
 		@@include('_header.html',{})
 		<main class="page">
+			<div class="about">
+				<div class="about__content _container">
+					<div class="about__column">
+						<div class="about__title">ABOUT US</div>
+						<div class="about__p-1">The occupational traffic permit is one of the most important things in
+							the
+							company when carrying out freight transport. In fact, it is a prerequisite for doing
+							business traffic at all.
+						</div>
+						<div class="about__p-2 p_pink">How do you do when you need to obtain
+							a commercial traffic permit for freight transport to your business?
+						</div>
+					</div>
+					<div class="about__img">
+						<img src="img/about__img.svg" alt="">
+					</div>
+				</div>
+			</div>
 		</main>
 		@@include('_footer.html',{})
 	</div>
