--- a/#src/index.html
+++ b/#src/index.html
@@ -26,6 +26,108 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="how-to">
+				<div class="how-to__content _container">
+					<div class="how-to__img">
+						<img src="img/how-to__img.svg" alt="">
+					</div>
+					<div class="how-to__column">
+						<div class="how-to__title">
+							How to apply
+						</div>
+						<div class="how-to__p">
+							When applying for a traffic permit, there are certain requirements that you must meet that
+							are included in the examination: requirements for professional knowledge, solid
+							establishment, good reputation and financial resources. Important to remember is to confirm
+							your application for a traffic permit by the company's company signer or CEO.
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="faq">
+				<div class="faq__content _container">
+
+					<div class="faq__row">
+						<div class="faq__column">
+							<div class="faq__title">FAQ</div>
+							<div class="faq__p">Questions and Answers on Professional Traffic Permits:</div>
+						</div>
+						<div class="faq__img">
+							<img src="img/faq__img.svg" alt="">
+						</div>
+					</div>
+
+					<div class="faq__spollers spollers-faq _spollers">
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">What is a professional traffic permit?</div>
+							<div class="spollers-faq__body">How is the sample for a professional traffic permit booked?
+							</div>
+						</div>
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">When is a professional traffic permit needed?
+							</div>
+							<div class="spollers-faq__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Quidem, perspiciatis? Dolorum distinctio saepe quibusdam et autem corporis consequatur
+								laboriosam! Nemo.</div>
+						</div>
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">How to check the traffic condition?</div>
+							<div class="spollers-faq__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Quidem, perspiciatis? Dolorum distinctio saepe quibusdam et autem corporis consequatur
+								laboriosam! Nemo.</div>
+						</div>
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">Where to look for a traffic permit?</div>
+							<div class="spollers-faq__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Quidem, perspiciatis? Dolorum distinctio saepe quibusdam et autem corporis consequatur
+								laboriosam! Nemo.</div>
+						</div>
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">What are the requirements for a professional
+								traffic permit?</div>
+							<div class="spollers-faq__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Quidem, perspiciatis? Dolorum distinctio saepe quibusdam et autem corporis consequatur
+								laboriosam! Nemo.</div>
+						</div>
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">Are there differences between a traffic permit and
+								a professional traffic permit?</div>
+							<div class="spollers-faq__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Quidem, perspiciatis? Dolorum distinctio saepe quibusdam et autem corporis consequatur
+								laboriosam! Nemo.</div>
+						</div>
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">Are there professional traffic permit training
+								courses at a distance?</div>
+							<div class="spollers-faq__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Quidem, perspiciatis? Dolorum distinctio saepe quibusdam et autem corporis consequatur
+								laboriosam! Nemo.</div>
+						</div>
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">How much does a commercial traffic permit cost for
+								goods?</div>
+							<div class="spollers-faq__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Quidem, perspiciatis? Dolorum distinctio saepe quibusdam et autem corporis consequatur
+								laboriosam! Nemo.</div>
+						</div>
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">How to plug in for the traffic permit test?</div>
+							<div class="spollers-faq__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Quidem, perspiciatis? Dolorum distinctio saepe quibusdam et autem corporis consequatur
+								laboriosam! Nemo.</div>
+						</div>
+						<div class="spollers-faq__item">
+							<div class="spollers-faq__title _spoller">How is the sample for a professional traffic
+								permit booked?</div>
+							<div class="spollers-faq__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Quidem, perspiciatis? Dolorum distinctio saepe quibusdam et autem corporis consequatur
+								laboriosam! Nemo.</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		@@include('_footer.html',{})
 	</div>
