--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,5 +1,47 @@
 <footer class="footer">
 	<div class="footer__content _container">
+		<div class="footer__row_1">
+			<div class="footer__p">We provide traffic management consultants so you get started quickly, contact us for
+				a quote today!</div>
+			<form action="#" class="footer__form form-footer form">
+				<div class="form-footer__line">
+					<label for="form-footer__name" class="form-footer__label">Name</label>
+					<input id="form-footer__name" autocomplete="off" type="text" name="form[]" data-error="invalid name"
+						data-value="Hendrik Larsson" class="input input_1 _req">
+				</div>
+				<div class="form-footer__line">
+					<label for="form-footer__email" class="form-footer__label">Email address</label>
+					<input id="form-footer__email" autocomplete="off" type="email" name="form[]"
+						data-error="invalid email" data-value="Your email address" class="input input_2 _req">
+				</div>
+				<button type="submit" class="form-footer__btn btn btn_arrow"><span>GET STARTED</span></button>
+			</form>
+		</div>
+		<div class="footer__row_2">
+			<a href="" class="footer__logo">
+				<img src="img/Logo.svg" alt="">
+			</a>
 
+			<ul class="footer__nav">
+				<li class=""><a>ABOUT</a></li>
+				<li class=""><a>HOW TO</a></li>
+				<li class=""><a>FAQS</a></li>
+			</ul>
+
+		</div>
+
+		<img class="footer__bg" src="img/footer-bg.svg" alt="">
 	</div>
+
+	<div class="footer__socials _container">
+		<div class="footer__copyright">
+			Copyright @ 2019
+		</div>
+		<ul class="footer__socials__ul">
+			<li><a><img src="img/f.svg" alt=""></a></li>
+			<li><a><img src="img/t.svg" alt=""></a></li>
+			<li><a><img src="img/i.svg" alt=""></a></li>
+		</ul>
+	</div>
+
 </footer>
