--- a/#src/index.html
+++ b/#src/index.html
@@ -58,7 +58,6 @@
 							<img src="img/faq__img.svg" alt="">
 						</div>
 					</div>
-
 					<div class="faq__spollers spollers-faq _spollers">
 						<div class="spollers-faq__item">
 							<div class="spollers-faq__title _spoller">What is a professional traffic permit?</div>
@@ -128,6 +127,47 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="reviews">
+				<div class="reviews__content _container">
+					<div class="reviews__column">
+						<div class="reviews__title">ABOUT US</div>
+						<div class="reviews__p">Out Awesome
+							Clients</div>
+					</div>
+					<div class="reviews__slider__wrapper">
+						<div class="reviews__slider _swiper">
+							<div class="reviews__slide slide-reviews">
+								<div class="slide-reviews__p">Yes, you will need to have the land owner sign the permit
+									application as the Permittee, and you sign the permit as the Applicant or Agent for
+									the
+									Permittee.</div>
+								<div class="slide-reviews__name slide-reviews__name_1">Isak Pettersson</div>
+							</div>
+
+							<div class="reviews__slide slide-reviews">
+								<div class="slide-reviews__p">From most barricade or traffic control companies located
+									in the phone book. They employ certified Traffic Control Supervisors (TCS) who can
+									generate and certify the traffic control plan. </div>
+								<div class="slide-reviews__name slide-reviews__name_2">Simon Sandberg</div>
+							</div>
+
+							<div class="reviews__slide slide-reviews">
+								<div class="slide-reviews__p">An A-Line, or access restriction deed is a property right
+									that has been obtained by CDOT for the sole purpose of prohibiting direct</div>
+								<div class="slide-reviews__name slide-reviews__name_3">Isak Pettersson</div>
+							</div>
+						</div>
+						<div class="reviews__slider__item_prev">
+							<img src="img/slider__arrow-right.svg" alt="">
+						</div>
+						<div class="reviews__slider__item_next">
+							<img src="img/slider__arrow-right.svg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</main>
 		@@include('_footer.html',{})
 	</div>
