copyright, nav-js

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -23,9 +23,9 @@
 			</a>
 
 			<ul class="footer__nav">
-				<li class=""><a>ABOUT</a></li>
-				<li class=""><a>HOW TO</a></li>
-				<li class=""><a>FAQS</a></li>
+				<li class=""><a href="#about" class="_goto">ABOUT</a></li>
+				<li class=""><a href="#how-to" class="_goto">HOW TO</a></li>
+				<li class=""><a href="#faq" class="_goto">FAQS</a></li>
 			</ul>
 
 		</div>
@@ -37,10 +37,10 @@
 		<div class="footer__copyright">
 			Copyright @ 2019
 		</div>
-		<ul class="footer__socials__ul">
-			<li><a><img src="img/f.svg" alt=""></a></li>
-			<li><a><img src="img/t.svg" alt=""></a></li>
-			<li><a><img src="img/i.svg" alt=""></a></li>
+		<ul class="footer__socials__ul ">
+			<li><a href="" class=""><img src="img/f.svg" alt=""></a></li>
+			<li><a href="" class=""><img src="img/t.svg" alt=""></a></li>
+			<li><a href="" class=""><img src="img/i.svg" alt=""></a></li>
 		</ul>
 	</div>
 
