--- a/#src/_header.html
+++ b/#src/_header.html
@@ -11,9 +11,9 @@
 			</div>
 			<nav class="menu__body">
 				<ul class="menu__list">
-					<li><a href="" class="menu__link">ABOUT</a></li>
-					<li><a href="" class="menu__link">HOW TO</a></li>
-					<li><a href="" class="menu__link">FAQS</a></li>
+					<li><a href="#about" class="menu__link _goto-block">ABOUT</a></li>
+					<li><a href="#how-to" class="menu__link _goto-block">HOW TO</a></li>
+					<li><a href="#faq" class="menu__link _goto-block">FAQS</a></li>
 				</ul>
 				<a class="header__btn btn" href=""><span>CONTACT US</span></a>
 			</nav>
