--- a/#src/index.html
+++ b/#src/index.html
@@ -8,7 +8,7 @@
 	<div class="wrapper">
 		@@include('_header.html',{})
 		<main class="page">
-			<div class="about">
+			<div class="about _scr-item">
 				<div class="about__content _container">
 					<div class="about__column">
 						<div class="about__title">ABOUT US</div>
@@ -27,7 +27,7 @@
 				</div>
 			</div>
 
-			<div class="how-to">
+			<div class="how-to _scr-item">
 				<div class="how-to__content _container">
 					<div class="how-to__img">
 						<img src="img/how-to__img.svg" alt="">
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 
-			<div class="faq">
+			<div class="faq _scr-item">
 				<div class="faq__content _container">
 
 					<div class="faq__row">
