--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="footer__row_2">
 			<a href="" class="footer__logo">
-				<img src="img/Logo.svg" alt="">
+				<img src="img/logo.svg" alt="">
 			</a>
 
 			<ul class="footer__nav">
