--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="header__content _container">
 		<a href="" class="header__logo">
-			<img src="img/Logo.svg" alt="">
+			<img src="img/logo.svg" alt="">
 		</a>
 		<div class="header__menu menu">
 			<div class="menu__icon icon-menu">
