--- a/#src/index.html
+++ b/#src/index.html
@@ -158,6 +158,7 @@
 								<div class="slide-reviews__name slide-reviews__name_3">Isak Pettersson</div>
 							</div>
 						</div>
+						<div class="reviews-slider__pagination swiper-pagination"></div>
 						<div class="reviews__slider__item_prev">
 							<img src="img/slider__arrow-right.svg" alt="">
 						</div>
